project dependencies updated to run based on java8